--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,9 @@ jobs:
       with:
         dotnet-version: 8.x
         
-    # Aggiunta permessi utente alla cartella di progetto
-    - name: Give user permissions to folder
-      run: sudo chmod -R 755 ./FRifugioBlog
-    
     # Publish del progetto Blazor sulla cartella release
     - name: Publish .NET Core Project
-      run: sudo dotnet publish ./FRifugioBlog/FRifugioBlog.csproj -c Release -o release --nologo
+      run: dotnet publish ./FRifugioBlog/FRifugioBlog.csproj -c Release -o release --nologo
     
     #  Cambio tag base in index.html da '/' a 'blog' per riconoscere la sottocartella di GitHub Pages
     - name: Change base-tag in index.html from / to my Repository Name
