--- a/FRifugioBlog/FRifugioBlog.csproj
+++ b/FRifugioBlog/FRifugioBlog.csproj
@@ -11,6 +11,6 @@
     <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ServiceWorker Include="wwwroot\service-worker.js" />
+    <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 </Project>
