--- a/FRifugioBlog/wwwroot/manifest.json
+++ b/FRifugioBlog/wwwroot/manifest.json
@@ -82,5 +82,14 @@
         }
       ]
     }
+  ],
+  "edge_side_panel": {
+    "preferred_width": 375
+  },
+  "categories": [
+    "education",
+    "entertainment",
+    "games",
+    "news"
   ]
 }
